# libzealand_old

./: .gitmodules  CMakeLists.txt  ConeView.hpp  GTEFOV.hpp  IOUtil.hpp  IOUtils.hpp  README.md  RigidView.hpp  SphereView.hpp  SphericalPolyView.hpp  VolumeFOV.hpp  Zealand.cpp  Zealand.hpp  util.hpp
benchmarks/: CMakeLists.txt  Cone.cpp  Sphere.cpp  SphereCone.cpp
examples/: CMakeLists.txt  Cone.cpp  RiderConstellation.cpp  RiderSatellite.cpp  Sphere.cpp  SphereCone.cpp  ZCurves.cpp  ZCurves3D.cpp
profile/: CMakeLists.txt  ZealandProf.cpp  ZealandProf_Par.cpp  ZealandProf_Seq.cpp
test/: CMakeLists.txt  ConeViewTest.cpp  IOUtilsTest.cpp  ZealandTest.cpp  ZealandTest_Compile.cpp  ZealandTest_Slow.cpp  ZealandTest_Slow_0.cpp
test/input/: state_cartesian.csv
